best-practices/disallow-empty-ingress-host/e2e/01-policy.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- ../disallow_empty_ingress_host.yaml
assert:
- policy-ready.yaml
