best-practices/disallow-empty-ingress-host/e2e/02-enforce.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
commands:
- script: |
    sed 's/validationFailureAction: audit/validationFailureAction: Enforce/' ../disallow_empty_ingress_host.yaml | kubectl apply -f -
