best-practices/disallow-empty-ingress-host/e2e/04-manifests.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- file: good-ingress.yaml
  shouldFail: false
- file: no-host-ingress.yaml
  shouldFail: true
- file: no-host-fail-first.yaml
  shouldFail: true
- file: no-host-success-first.yaml
  shouldFail: true
