best-practices/disallow-empty-ingress-host/e2e/99-delete.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
delete:
- apiVersion: kyverno.io/v1
  kind: ClusterPolicy
  name: disallow-empty-ingress-host
