best-practices/disallow-empty-ingress-host/e2e/03-enforce-policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-empty-ingress-host
spec:
  validationFailureAction: enforce
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
